; ModuleID = '/home/carl/AnghaBench/libgit2/tests/odb/backend/extr_mempack.c_test_odb_backend_mempack__exists_with_existing_objects_succeeds.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/odb/backend/extr_mempack.c_test_odb_backend_mempack__exists_with_existing_objects_succeeds.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"data\00", align 1
@_oid = common dso_local global i32 0, align 4
@_odb = common dso_local global i32 0, align 4
@GIT_OBJECT_BLOB = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_odb_backend_mempack__exists_with_existing_objects_succeeds() #0 {
  %1 = alloca i8*, align 8
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  %2 = load i32, i32* @_odb, align 4
  %3 = load i8*, i8** %1, align 8
  %4 = load i8*, i8** %1, align 8
  %5 = call i64 @strlen(i8* %4)
  %6 = add nsw i64 %5, 1
  %7 = load i32, i32* @GIT_OBJECT_BLOB, align 4
  %8 = call i32 @git_odb_write(i32* @_oid, i32 %2, i8* %3, i64 %6, i32 %7)
  %9 = call i32 @cl_git_pass(i32 %8)
  %10 = load i32, i32* @_odb, align 4
  %11 = call i32 @git_odb_exists(i32 %10, i32* @_oid)
  %12 = icmp eq i32 %11, 1
  %13 = zext i1 %12 to i32
  %14 = call i32 @cl_assert(i32 %13)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_odb_write(i32*, i32, i8*, i64, i32) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @git_odb_exists(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
